--- a/website/static/webplayer.html
+++ b/website/static/webplayer.html
@@ -26,6 +26,7 @@
         background: #f5f5f5;
         box-sizing:border-box;
         font-family: 'Roboto', sans-serif;
+        border-top: 1px solid #ccc;
     }
 
     .container .toolbar input {
