--- a/website/static/webplayer.html
+++ b/website/static/webplayer.html
@@ -59,6 +59,11 @@
         color: hsl(0, 0%, 44%) !important;
     }
 
+    .ace_folding-enabled > .ace_gutter-cell {
+        padding-right: 13px;
+        color: #9a9a9a !important;
+    }
+
     #fbLoader img {
         height: 50px;
         width: auto;
